refactor to use uv

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 AZURE_OPENAI_API_KEY=<yours>
 AZURE_OPENAI_ENDPOINT=https://<yours>.openai.azure.com
-AZURE_OPENAI_DEPLOYMENT_NAME=gpt-4o
-AZURE_OPENAI_API_VERSION=2024-10-01-preview
+AZURE_OPENAI_DEPLOYMENT_NAME=gpt-4.1-mini
+AZURE_OPENAI_API_VERSION=2025-04-01-preview
 SERPAPI_KEY=<yours>
