--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,10 @@ authors = [
     {name = "Andy", email = "your.email@example.com"},
 ]
 dependencies = [
-    "autogen-agentchat>=0.4.0",
+    "autogen-agentchat>=0.6.4",
+    "autogen_ext>=0.6.4",
+    "autogen-ext[docker]>=0.6.4",
+    "autogen-core>=0.6.4",
     "jupyter>=1.0.0",
     "ipykernel>=6.0.0",
     "python-dotenv>=1.0.0",
@@ -15,6 +18,15 @@ dependencies = [
     "matplotlib>=3.0.0",
     "pandas>=2.0.0",
     "requests>=2.25.0",
+    "markitdown>=0.1.2",
+    "playwright>=1.53.0",
+    "yfinance>=0.2.65",
+    "pytz>=2025.2",
+    "numpy>=2.2.6",
+    "bs4>=0.0.2",
+    "tiktoken>=0.9.0",
+    "aiofiles>=24.1.0",
+    "docker>=7.1.0",
 ]
 readme = "README.md"
 requires-python = ">=3.10"
