--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -49,7 +49,9 @@
       "onAutoForward": "notify"
     }
   },
-  "postCreateCommand": "curl -LsSf https://astral.sh/uv/install.sh | sh && source $HOME/.cargo/env && [ -f .devcontainer/setup.sh ] && bash .devcontainer/setup.sh || echo 'Setup script not found, skipping...'",
+  "onCreateCommand": "bash .devcontainer/setup.sh",
+  "postCreateCommand": "bash .devcontainer/post-create.sh",
+  
   "remoteUser": "vscode",
   "remoteEnv": {
     "PYTHONUNBUFFERED": "1",
