--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,50 +1,61 @@
 {
-  "name": "AutoGen 0.4 Sample",
-  "image": "mcr.microsoft.com/devcontainers/python:3.11-bullseye",
+  "name": "Azure AI Workshop",
+  "image": "mcr.microsoft.com/devcontainers/python:3.12",
+  
   "features": {
-    "ghcr.io/devcontainers/features/docker-in-docker:2": {},
-    "ghcr.io/devcontainers/features/common-utils:2": {
-      "installZsh": false,
-      "installOhMyZsh": false,
-      "upgradePackages": true
+    "ghcr.io/devcontainers/features/python:1": {
+      "version": "3.12",
+      "installTools": true
+    },
+    "ghcr.io/devcontainers/features/node:1": {
+      "version": "lts"
     }
   },
+
   "customizations": {
     "vscode": {
-      "extensions": [
-        "ms-python.python",
-        "ms-python.vscode-pylance",
-        "ms-toolsai.jupyter",
-        "ms-toolsai.vscode-jupyter-cell-tags",
-        "ms-toolsai.vscode-jupyter-slideshow",
-        "ms-python.flake8",
-        "ms-python.black-formatter",
-        "ms-vscode.vscode-json",
-        "redhat.vscode-yaml",
-        "bradlc.vscode-tailwindcss",
-        "esbenp.prettier-vscode"
-      ],
       "settings": {
-        "python.defaultInterpreterPath": "./.venv/bin/python",
+        "python.defaultInterpreterPath": "/workspaces/azure-ai-workshop/.venv/bin/python",
         "python.terminal.activateEnvironment": true,
         "python.formatting.provider": "black",
         "python.linting.enabled": true,
-        "python.linting.pylintEnabled": false,
-        "python.linting.flake8Enabled": true,
+        "python.linting.pylintEnabled": true,
         "jupyter.askForKernelRestart": false,
-        "jupyter.interactiveWindow.creationMode": "perFile",
+        "jupyter.interactiveWindow.collapseCellInputCode": "fromKeyboard",
+        "notebook.cellToolbarLocation": {
+          "default": "right",
+          "jupyter-notebook": "left"
+        },
         "files.associations": {
           "*.ipynb": "jupyter-notebook"
         }
-      }
+      },
+      "extensions": [
+        "ms-python.python",
+        "ms-python.vscode-pylance",
+        "ms-python.black-formatter",
+        "ms-toolsai.jupyter",
+        "ms-toolsai.jupyter-keymap",
+        "ms-toolsai.jupyter-renderers",
+        "ms-toolsai.vscode-jupyter-cell-tags",
+        "ms-toolsai.vscode-jupyter-slideshow",
+        "ms-vscode.vscode-json",
+        "ms-azuretools.vscode-azureresourcegroups",
+        "ms-vscode.azurecli",
+        "charliermarsh.ruff",
+        "tamasfe.even-better-toml",
+        "ms-vscode.live-server",
+        "GitHub.copilot",
+        "GitHub.copilot-chat"
+      ]
     }
   },
-  "forwardPorts": [8081, 8888, 8000],
+
+  "onCreateCommand": "bash .devcontainer/setup.sh",
+  "postCreateCommand": "bash .devcontainer/post-create.sh",
+  
+  "forwardPorts": [8000, 8080, 8888, 5000],
   "portsAttributes": {
-    "8081": {
-      "label": "AutoGen Studio",
-      "onAutoForward": "notify"
-    },
     "8888": {
       "label": "Jupyter Lab",
       "onAutoForward": "notify"
@@ -54,18 +65,11 @@
       "onAutoForward": "notify"
     }
   },
-  "onCreateCommand": "chmod +x .devcontainer/setup.sh && .devcontainer/setup.sh",
-  "postCreateCommand": "chmod +x .devcontainer/post-create.sh && .devcontainer/post-create.sh",
-  
+
   "remoteUser": "vscode",
-  "remoteEnv": {
-    "PYTHONUNBUFFERED": "1",
-    "PYTHONDONTWRITEBYTECODE": "1",
-    "UV_CACHE_DIR": "/tmp/uv-cache",
-    "UV_PYTHON_DOWNLOADS": "automatic",
-    "PATH": "/home/vscode/.local/bin:/home/vscode/.cargo/bin:${PATH}"
-  },
-  "containerEnv": {
-    "PATH": "/home/vscode/.local/bin:/home/vscode/.cargo/bin:${PATH}"
-  }
+  "containerUser": "vscode",
+  
+  "mounts": [
+    "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind"
+  ]
 }
